--- a/src/main/resources/filepath.properties
+++ b/src/main/resources/filepath.properties
@@ -1,9 +1,9 @@
 ##文件保存路径
 ##用户头像保存路径
-file.disk.path.userhead=F:\\YunZhi\\UserHeadImg\\
+file.disk.path.userhead=F:\\workspace\\YunZhi-master\\src\\main\\webapp\\assets\\images\\UserHeadImg\\
 ##用户头像保存相对路径
 file.relative.path.userhead=/UserHeadImg/
 ##回答中插入的图片
-file.disk.path.answerimg=F:\\YunZhi\\AnswersImg\\
+file.disk.path.answerimg=F:\\workspace\\YunZhi-master\\src\\main\\webapp\\assets\\images\\AnswersImg\\
 ##回答中插入的图片保存相对路径
 file.relative.path.answerimg=/AnswersImg/
