--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <spring.version>5.0.6.RELEASE</spring.version>
     <jackson.version>2.9.1</jackson.version>
     <shiro.version>1.4.0</shiro.version>
-    <lucene.version>7.3.0</lucene.version>
+    <lucene.version>6.2.1</lucene.version>
   </properties>
 
   <build>
@@ -55,6 +55,14 @@
         <artifactId>maven-deploy-plugin</artifactId>
         <version>2.8.2</version>
       </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
     </plugins>
     <resources>
       <resource>
